--- a/SOK.Web/Views/Settings/Users/Create.cshtml
+++ b/SOK.Web/Views/Settings/Users/Create.cshtml
@@ -6,7 +6,7 @@
     var allRoles = ViewData["AllRoles"] as List<Role> ?? new List<Role>();
 }
 
-<div id="createUserApp" class="min-h-full w-full flex flex-col items-center justify-center">
+<div id="create-user-app" class="min-h-full w-full flex flex-col items-center justify-center">
     <form asp-action="CreateUser" method="post" class="flex flex-col gap-x-3 gap-y-4 w-5/6">
         <!-- === Sekcja 1: Podstawowe dane === -->
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
@@ -145,7 +145,8 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
-    <script src="https://cdn.jsdelivr.net/npm/vue@3/dist/vue.global.js"></script>
+    <partial name="_VueScript" />
+    
     <script>
         const { createApp } = Vue;
         
@@ -157,6 +158,9 @@
                     generatedPassword: null,
                     passwordCopied: false
                 }
+            },
+            mounted() {
+                registerVueApp('create-user-app');
             },
             methods: {
                 generatePassword() {
@@ -186,6 +190,6 @@
                     }
                 }
             }
-        }).mount('#createUserApp');
+        }).mount('#create-user-app');
     </script>
 }
