Poprawki błędów i widoczności przypisania do planu

--- a/SOK.Web/Views/Calendar/ManageDays.cshtml
+++ b/SOK.Web/Views/Calendar/ManageDays.cshtml
@@ -262,7 +262,7 @@
                     };
 
                     try {
-                        const response = await fetch('/api/CalendarApi/days', {
+                        const response = await fetch('/api/Calendar/days', {
                             method: 'POST',
                             headers: {
                                 'Content-Type': 'application/json'
