Usunięcie cienia z daty w submission panelu

--- a/SOK.Web/Views/PublicForm/SubmissionPanel.cshtml
+++ b/SOK.Web/Views/PublicForm/SubmissionPanel.cshtml
@@ -147,7 +147,7 @@
                             
                             @if (Model.Visit.PlannedDate.HasValue)
                             {
-                                <div class="stats shadow">
+                                <div class="stats">
                                     <div class="stat place-items-center">
                                         <div class="stat-title">Data wizyty</div>
                                         <div class="stat-value text-3xl">@Model.Visit.PlannedDate.Value.ToString("dd.MM.yyyy")</div>
