Przeniesiono skrypty z CDNa do lokalnego środowiska

--- a/SOK.Web/Views/Shared/_VueScript.cshtml
+++ b/SOK.Web/Views/Shared/_VueScript.cshtml
@@ -1,1 +1,2 @@
-<script src="https://unpkg.com/vue@3"></script>
+@* Vue.js - use local version (automatically selects dev/prod) *@
+<partial name="_VueScriptLocal" />
